@@ -328,6 +328,12 @@ if HAVE_VALGRIND
 endif
 endif
 
+.PHONY: multipagetests
+multipagetests:	all
+	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/multipage/sample.ps -c 'list "sort";a=page; goto;b=page; goto "+1p+1p";c=page; goto "+1p+1p";d=page; goto "+1p+1p";e=page; stdout a.".".b.".".c.".".d.".".e;quit' | grep 0.0.1.2.0;
+	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/multipage/sample.ps -c 'list "sort";a=page; goto;b=page; goto "+1";c=page; goto "+1+1";d=page; goto "+1+1";e=page; stdout a.".".b.".".c.".".d.".".e;quit' | grep 0.0.1.2.0;
+	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/multipage/sample.ps -c 'list "sort";a=page; goto;b=page; goto "+1f+1f";c=page; goto "+1f+1f";d=page; goto "+1f+1f";e=page; stdout a.".".b.".".c.".".d.".".e;quit' | grep 0.0.0.0.0;
+
 # this is the official way of testing fim
 .PHONY: tests
 tests:	all
@@ -391,11 +397,7 @@ if ENABLE_PNG
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/image.png $(top_srcdir)/media/fim.png $(top_srcdir)/media/numbers_pcx/*.pcx -c 'list "sort";a=_fileindex; goto;b=_fileindex; goto "+1f+2f";c=_fileindex; stdout a.".".b.".".c."."._filelistlen;quit' | grep 0.0.3.12 # goto: only last subspec effective
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/image.png $(top_srcdir)/media/fim.png $(top_srcdir)/media/numbers_pcx/*.pcx -c 'list "sort";a=_fileindex; goto;b=_fileindex; goto "+2f+1f";c=_fileindex; stdout a.".".b.".".c."."._filelistlen;quit' | grep 0.0.2.12 # goto: only last subspec effective
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/image.png $(top_srcdir)/media/fim.png $(top_srcdir)/media/numbers_pcx/*.pcx -c 'list "sort";a=_fileindex; goto;b=_fileindex; goto "+2p+1p";c=_fileindex; stdout a.".".b.".".c."."._filelistlen;quit' | grep 0.0.0.12 # goto: page jump idempotent on one-pager
-if ENABLE_PS
-	if $(MAKE) -C $(top_srcdir)/media/multipage ; then \
-		$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/multipage/sample.ps -c 'list "sort";a=page; goto;b=page; goto "+1p+1p";c=page; goto "+1p+1p";d=page; goto "+1p+1p";e=page; stdout a.".".b.".".c.".".d.".".e;quit' | grep 0.0.1.2.0; \
-	fi # goto: page jump idempotent on one-pager
-endif
+	@if $(MAKE) -C $(top_srcdir)/media/multipage ; then make multipagetests; fi
 endif
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx -c 'list "sort";a=_fileindex; goto;b=_fileindex; goto "+50%";c=_fileindex; stdout a.".".b.".".c."."._filelistlen;quit'
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file $(top_srcdir)/media/special/images.desc -c 'list "sort"; a=_fileindex; goto "+prime"; b=_fileindex;goto "+prime"; c=_fileindex; goto "+prime"; d=_fileindex; goto "+prime"; e=_fileindex; stdout a.".".b.".".c.".".d.".".e; quit' | grep 0.2.5.6.1
