@@ -1212,7 +1212,7 @@ namespace fim
 #else /* FIM_DISABLE_WINDOW_SPLITTING */
 #define FIM_CMD_HELP_WINDOW FIM_FLT_WINDOW " " FIM_CNS_EX_ARGS_STRING ": manipulates the window system windows; each value of " FIM_CNS_EX_ARGS_STRING " shall be one of ['split' | 'hsplit' | 'vsplit' | 'normalize' | 'enlarge' | 'venlarge' | 'henlarge' | 'up' | 'down' | 'left' | 'right' | 'close' | 'swap']."
 #endif /* FIM_DISABLE_WINDOW_SPLITTING */
-#define FIM_CMD_HELP_GOTO 	FIM_FLT_GOTO " {['+'|'-']" FIM_CNS_EX_NUM_STRING "['%']['f'|'p'|'F'|'P']}+ | {/" FIM_CNS_EX_RE_STRING "/} | {" FIM_SYM_BW_SEARCH_KEY_STR FIM_CNS_EX_FN_STRING "} | {'+//'} | {'+/'|'-/'}[" FIM_MAN_fR("C") "] | {{'+'|'-'}" FIM_CNS_EX_ID_STRING "['+']}: jump to an image." FIM_CNS_CMDSEP "If " FIM_CNS_EX_NUM_STRING " is given, and not surrounded by any specifier, go to image at index " FIM_CNS_EX_NUM_STRING "." FIM_CNS_CMDSEP "If followed by '%', the effective index is computed as a percentage to the current available images." FIM_CNS_CMDSEP "If prepended by '-' or '+', the jump is relative to the current index." FIM_CNS_CMDSEP "The 'f' specifier asks for the jump to occur within the files (same for 'F', but accelerates if keep pressing)." FIM_CNS_CMDSEP "The 'p' specifier asks for the jump to occur in terms of pages, within the current file (same for 'P', but accelerates if keep pressing). The above form can be concatenated several times, but only the last occurrence of either file or page goto will be effective."  FIM_CNS_CMDSEP "If /" FIM_CNS_EX_RE_STRING "/ is given, jump to the first image matching the given /" FIM_CNS_EX_RE_STRING "/ regular expression pattern." FIM_CNS_CMDSEP "If the argument starts with " FIM_SYM_BW_SEARCH_KEY_STR ", jump to the filename following " FIM_SYM_BW_SEARCH_KEY_STR "." FIM_CNS_CMDSEP "If given '+//', jump to the first different image matching the last given regular expression pattern." FIM_CNS_CMDSEP "With '+/'" FIM_MAN_fR("C") " or '-/'" FIM_MAN_fR("C") ", jump to the next or the previous file according to " FIM_MAN_fR("C") ": if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir)." FIM_CNS_CMDSEP "If " FIM_CNS_EX_IDS_STRING " is encountered after a '+' or '-' sign, jump to the next or the previous image having a different value for any corresponding i:" FIM_CNS_EX_ID_STRING " (a trailing '+' requires a non empty value)." FIM_CNS_CMDSEP "Matching can occur on both file name and description, possibly loaded via " FIM_FLT_DESC " or --" FIM_OSW_LOAD_IMG_DSC_FILE "; see also '" FIM_VID_LASTGOTODIRECTION "' and '" FIM_VID_RE_SEARCH_OPTS "'." FIM_CNS_CMDSEP " You can specify multiple arguments to " FIM_FLT_GOTO ": those after the first one triggering a jump are ignored." FIM_CMD_ACM_INFO(FIM_ACM_PREGOTO,FIM_ACM_POSTGOTO) " Keeping pressed shall accelerate images browsing."
+#define FIM_CMD_HELP_GOTO 	FIM_FLT_GOTO " {['+'|'-']" FIM_CNS_EX_NUM_STRING "['%']['f'|'p'|'F'|'P']}+ | {/" FIM_CNS_EX_RE_STRING "/} | {" FIM_SYM_BW_SEARCH_KEY_STR FIM_CNS_EX_FN_STRING "} | {'+//'} | {'+/'|'-/'}[" FIM_MAN_fR("C") "] | {{'+'|'-'}" FIM_CNS_EX_ID_STRING "['+']}: jump to an image." FIM_CNS_CMDSEP "If " FIM_CNS_EX_NUM_STRING " is given, and not surrounded by any specifier, go to image at index " FIM_CNS_EX_NUM_STRING "." FIM_CNS_CMDSEP "If followed by '%', the effective index is computed as a percentage to the current available images." FIM_CNS_CMDSEP "If prepended by '-' or '+', the jump is relative to the current index." FIM_CNS_CMDSEP "The 'f' specifier asks for the jump to occur within the files (same for 'F', but accelerates if keep pressing)." FIM_CNS_CMDSEP "The 'p' specifier asks for the jump to occur in terms of pages, within the current file (same for 'P', but accelerates if keep pressing)." FIM_CNS_CMDSEP "If there's only one file in the list and no 'f' specified, a 'p' will be implied, for a page jump."  FIM_CNS_CMDSEP "The above form can be concatenated several times, but only the last occurrence of either file or page goto will be effective."  FIM_CNS_CMDSEP "If /" FIM_CNS_EX_RE_STRING "/ is given, jump to the first image matching the given /" FIM_CNS_EX_RE_STRING "/ regular expression pattern." FIM_CNS_CMDSEP "If the argument starts with " FIM_SYM_BW_SEARCH_KEY_STR ", jump to the filename following " FIM_SYM_BW_SEARCH_KEY_STR "." FIM_CNS_CMDSEP "If given '+//', jump to the first different image matching the last given regular expression pattern." FIM_CNS_CMDSEP "With '+/'" FIM_MAN_fR("C") " or '-/'" FIM_MAN_fR("C") ", jump to the next or the previous file according to " FIM_MAN_fR("C") ": if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir)." FIM_CNS_CMDSEP "If " FIM_CNS_EX_IDS_STRING " is encountered after a '+' or '-' sign, jump to the next or the previous image having a different value for any corresponding i:" FIM_CNS_EX_ID_STRING " (a trailing '+' requires a non empty value)." FIM_CNS_CMDSEP "Matching can occur on both file name and description, possibly loaded via " FIM_FLT_DESC " or --" FIM_OSW_LOAD_IMG_DSC_FILE "; see also '" FIM_VID_LASTGOTODIRECTION "' and '" FIM_VID_RE_SEARCH_OPTS "'." FIM_CNS_CMDSEP " You can specify multiple arguments to " FIM_FLT_GOTO ": those after the first one triggering a jump are ignored." FIM_CMD_ACM_INFO(FIM_ACM_PREGOTO,FIM_ACM_POSTGOTO) " Keeping pressed shall accelerate images browsing."
 #define FIM_CMD_HELP_SCALE	FIM_FLT_SCALE " {['+'|'-']" FIM_CNS_EX_VALUE "['%']|'*'" FIM_CNS_EX_VALUE "|'w'|'h'|'a'|'b'|'+[+-*/]'|['<'|'>']|'shadow'}: scale the image according to a scale " FIM_CNS_EX_VALUE " (e.g.: 0.5,40%,'w','h','a','b')." FIM_CNS_CMDSEP "If given '*' and a value, multiply the current scale by that value." FIM_CNS_CMDSEP "If given 'w', scale according to the screen width." FIM_CNS_CMDSEP "If given 'h', scale to the screen height." FIM_CNS_CMDSEP "If given 'a', to the minimum of 'w' and 'h'." FIM_CNS_CMDSEP "If given 'b', like 'a', provided that the image width exceeds 'w' or 'h'." FIM_CNS_CMDSEP "If " FIM_CNS_EX_VALUE " is a number, scale relatively to the original image width." FIM_CNS_CMDSEP "If the number is followed by '%', the relative scale is treated as a percentage." FIM_CNS_CMDSEP "If given '++'('+-'), increment (decrement) the '" FIM_VID_MAGNIFY_FACTOR "', '" FIM_VID_REDUCE_FACTOR "' variables by '" FIM_VID_SCALE_FACTOR_DELTA "'." FIM_CNS_CMDSEP "If given '+*'('+/'), multiply (divide) the '" FIM_VID_MAGNIFY_FACTOR "', '" FIM_VID_REDUCE_FACTOR "' variables by '" FIM_VID_SCALE_FACTOR_MULTIPLIER "'." FIM_CNS_CMDSEP "If given '<' (or '>'), shrink (or magnify) image using nearest mipmap (cached pre-scaled version). If given 'shadow' as a parameter, search a same-named file in one of the directories specified to --load-shadow-dir." FIM_CMD_ACM_INFO(FIM_ACM_PRESCALE,FIM_ACM_POSTSCALE)
 #define FIM_CMD_HELP_HELP	FIM_FLT_HELP " [" FIM_CNS_EX_ID_STRING "]: provide online help, assuming " FIM_CNS_EX_ID_STRING " is a variable, alias, or command identifier." FIM_CNS_CMDSEP "If " FIM_CNS_EX_ID_STRING " begins with '" FIM_CNS_SLASH_STRING "', search on the help contents, and show a list of matching items." FIM_CNS_CMDSEP "A list of commands can be obtained simply invoking '" FIM_FLT_COMMANDS "'; a list of aliases with '" FIM_FLT_ALIAS "'; a list of bindings with '" FIM_FLT_BIND "'."
 #define FIM_FLT_HELP_DESC FIM_FLT_DESC " 'load' " FIM_CNS_EX_FN_STRING " [" FIM_CNS_EX_SEPCHAR "]: load description file " FIM_CNS_EX_FN_STRING ", using the optional " FIM_CNS_EX_SEPCHAR " character as separator." FIM_CNS_CMDSEP FIM_FLT_DESC " 'reload': load once again description files specified at the command line with --" FIM_OSW_LOAD_IMG_DSC_FILE ", with respective separators." FIM_CNS_CMDSEP FIM_FLT_DESC " ['-all'] ['-append'] ['-nooverw'] 'save' " FIM_CNS_EX_FN_STRING " [" FIM_CNS_EX_SEPCHAR "]: save current list descriptions to file " FIM_CNS_EX_FN_STRING ", using the optional " FIM_CNS_EX_SEPCHAR " character as separator, and if '-all' is present then save the variables, and if '-append' is present then only append, and if '-nooverw' is present then do not overwrite existing files." FIM_CNS_CMDSEP "See documentation of --" FIM_OSW_LOAD_IMG_DSC_FILE " for the format of " FIM_CNS_EX_FN_STRING "."
